--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       --focus: #2563eb;
 
       --accent: #0ea5a4;
-      --accent-ink: #0f766e;
       --accent-soft: rgba(14, 165, 164, 0.10);
 
       --heroImage: url("david-headshot.jpg");
@@ -44,9 +43,10 @@
       margin: 0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       color: var(--ink);
-      background: radial-gradient(1200px 600px at 10% 10%, rgba(14, 165, 164, 0.10), transparent 60%),
-                  radial-gradient(900px 500px at 90% 0%, rgba(37, 99, 235, 0.08), transparent 60%),
-                  var(--bg);
+      background:
+        radial-gradient(1200px 600px at 10% 10%, rgba(14, 165, 164, 0.10), transparent 60%),
+        radial-gradient(900px 500px at 90% 0%, rgba(37, 99, 235, 0.08), transparent 60%),
+        var(--bg);
       line-height: 1.55;
     }
 
@@ -198,7 +198,12 @@
       position: absolute;
       inset: 0;
       background:
-        linear-gradient(90deg, rgba(251, 250, 248, 0.92) 0%, rgba(251, 250, 248, 0.82) 45%, rgba(251, 250, 248, 0.55) 100%),
+        linear-gradient(
+          90deg,
+          rgba(251, 250, 248, 0.92) 0%,
+          rgba(251, 250, 248, 0.82) 45%,
+          rgba(251, 250, 248, 0.55) 100%
+        ),
         var(--heroImage);
       background-size: cover;
       background-position: center;
@@ -333,7 +338,11 @@
     }
 
     .card.soft {
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0.95) 0%, rgba(15, 23, 42, 0.02) 100%);
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0.95) 0%,
+        rgba(15, 23, 42, 0.02) 100%
+      );
     }
 
     .card h3 {
@@ -441,8 +450,9 @@
 
     .cta {
       border-top: 1px solid var(--border);
-      background: radial-gradient(800px 400px at 15% 30%, rgba(14, 165, 164, 0.12), transparent 60%),
-                  rgba(255, 255, 255, 0.35);
+      background:
+        radial-gradient(800px 400px at 15% 30%, rgba(14, 165, 164, 0.12), transparent 60%),
+        rgba(255, 255, 255, 0.35);
     }
 
     .cta-inner {
@@ -658,12 +668,241 @@
             <div class="icon" aria-hidden="true"></div>
             <div>
               <strong>Low in confidence</strong>
-              <span>Self-doubt, criticism, or feeling not “enough”.span>
+              <span>Self-doubt, criticism, or feeling not “enough”.</span>
+            </div>
+          </div>
+
+          <div class="icon-item" role="listitem">
+            <div class="icon" aria-hidden="true"></div>
+            <div>
+              <strong>Struggling with depression</strong>
+              <span>Low mood, numbness, or disconnection.</span>
+            </div>
+          </div>
+
+          <div class="icon-item" role="listitem">
+            <div class="icon" aria-hidden="true"></div>
+            <div>
+              <strong>Navigating neurodiversity</strong>
+              <span>Autism, ADHD, or feeling out of step.</span>
+            </div>
+          </div>
+
+          <div class="icon-item" role="listitem">
+            <div class="icon" aria-hidden="true"></div>
+            <div>
+              <strong>Coping with loss</strong>
+              <span>Grief, change, or life feeling different.</span>
+            </div>
+          </div>
+
+          <div class="icon-item" role="listitem">
+            <div class="icon" aria-hidden="true"></div>
+            <div>
+              <strong>Feeling stuck</strong>
+              <span>Unsure what you need, but knowing something isn’t right.</span>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <section id="about" aria-labelledby="about-title">
+      <div class="container">
+        <div class="about">
+          <div class="photo" aria-label="David Billington headshot">
+            <img src="david-headshot.jpg" alt="David Billington" loading="lazy" />
+          </div>
+
+          <div>
+            <h2 class="section-title" id="about-title">About David</h2>
+            <p class="lead">
+              I’m David Billington, a qualified counsellor. I offer face-to-face sessions in Horndean, Hampshire, as well as online therapy.
+            </p>
+            <p style="margin: 0 0 12px;">
+              My approach is warm, collaborative and grounded. Together, we explore your thoughts and experiences at a pace that feels safe.
+            </p>
+            <p style="margin: 0;">
+              I am a registered member of the British Association for Counselling and Psychotherapy (BACP) and work within their ethical framework.
+            </p>
+
+            <div class="badges" aria-label="Key points">
+              <span class="badge">BACP registered member</span>
+              <span class="badge">Adults 18+</span>
+              <span class="badge">Confidential &amp; ethical practice</span>
+              <span class="badge">Flexible day &amp; evening appointments</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="how" aria-labelledby="how-title">
+      <div class="container">
+        <h2 class="section-title" id="how-title">How therapy works</h2>
+        <p class="lead">Therapy is not about being “fixed”. It is about understanding yourself more deeply.</p>
+
+        <div class="grid grid-2">
+          <div class="card">
+            <h3>What we do together</h3>
+            <p>
+              Through conversation, reflection and gentle challenge, we explore patterns, emotions and experiences that may be shaping your current difficulties.
+            </p>
+          </div>
+
+          <div class="card">
+            <h3>Session structure</h3>
+            <p>
+              Sessions are 50 minutes and usually take place weekly at a consistent time. We regularly review our work to ensure it feels helpful and supportive.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="practical" aria-labelledby="practical-title">
+      <div class="container">
+        <h2 class="section-title" id="practical-title">Practical information</h2>
+
+        <div class="grid grid-3">
+          <div class="card soft">
+            <h3>In-person sessions</h3>
+            <p>Private and confidential setting in Horndean, Hampshire.</p>
+            <ul class="plain-list">
+              <li>On-street parking available</li>
+              <li>Bus stop 2 minutes away</li>
+            </ul>
+          </div>
+
+          <div class="card soft">
+            <h3>Online sessions</h3>
+            <p>Secure video sessions that are convenient and effective.</p>
+            <ul class="plain-list">
+              <li>Suitable if travel feels stressful</li>
+              <li>Access therapy from your own space</li>
+            </ul>
+          </div>
+
+          <div class="card soft">
+            <h3>Availability</h3>
+            <p>Mondays, Wednesdays and Thursdays.</p>
+            <ul class="plain-list">
+              <li>Daytime and evening appointments</li>
+              <li>Free 20-minute introductory call</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="help" aria-labelledby="help-title">
+      <div class="container">
+        <h2 class="section-title" id="help-title">Areas I can help with</h2>
+
+        <div class="help-grid" role="list" aria-label="Areas of support">
+          <div role="listitem">Anxiety</div>
+          <div role="listitem">Depression</div>
+          <div role="listitem">Low self-esteem</div>
+          <div role="listitem">Autism &amp; neurodiversity</div>
+          <div role="listitem">ADHD / ADD</div>
+          <div role="listitem">Bereavement &amp; loss</div>
+          <div role="listitem">Stress</div>
+          <div role="listitem">Trauma</div>
+          <div role="listitem">Health-related concerns</div>
+        </div>
+
+        <p class="lead" style="margin-top: 18px;">
+          I work integratively, drawing from person-centred, existential and humanistic approaches depending on your needs.
+        </p>
+      </div>
+    </section>
+
+    <section class="cta" aria-labelledby="cta-title">
+      <div class="container">
+        <div class="cta-inner">
+          <div>
+            <h2 class="section-title" id="cta-title" style="margin: 0 0 10px;">Taking the first step</h2>
+            <p style="margin: 0; color: var(--muted);">
+              Reaching out can feel difficult. You may not know exactly what you need — and that’s okay.
+              If you would like to explore whether therapy with me feels right, I invite you to arrange a free introductory call.
+            </p>
+          </div>
+
+          <div class="cta-actions">
+            <a class="btn btn-primary" href="#contact">Arrange a free call</a>
+            <a class="btn" href="#contact">Email David</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" aria-labelledby="contact-title">
+      <div class="container">
+        <h2 class="section-title" id="contact-title">Contact</h2>
+        <p class="lead">
+          If you’d like to arrange a free introductory call, or ask a question, you can phone, email, or send a message below.
+        </p>
+
+        <div class="grid grid-2">
+          <div class="card">
+            <h3>Get in touch</h3>
+            <p style="margin-bottom: 12px; color: var(--muted);">
+              Phone: <a href="tel:+447423819260">07423 819 260</a><br />
+              Email: <a href="mailto:hello@thejourneytowholeness.com">hello@thejourneytowholeness.com</a><br />
+              BACP: <a href="https://www.bacp.co.uk/therapists/399649/david-billington/waterlooville-po8" target="_blank" rel="noopener">View profile</a>
+            </p>
+            <p class="fineprint">If you prefer, you can simply send a message and I’ll reply to arrange a time.</p>
+          </div>
+
+          <div class="card">
+            <h3>Send a message</h3>
+            <form action="#" method="post" onsubmit="event.preventDefault(); alert('Form not connected yet.');">
+              <div class="form-row">
+                <div>
+                  <label for="name">Name</label>
+                  <input id="name" name="name" type="text" autocomplete="name" required />
+                </div>
+                <div>
+                  <label for="email">Email</label>
+                  <input id="email" name="email" type="email" autocomplete="email" required />
+                </div>
+              </div>
+
+              <div>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+              </div>
+
+              <button class="btn btn-primary" type="submit">Send message</button>
+
+              <p class="fineprint">
+                Please avoid sharing highly sensitive personal details in this form. We can discuss anything important in the introductory call.
+              </p>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <strong style="color: var(--ink);">David Billington</strong><br />
+          Counselling in Horndean, Hampshire &amp; Online
+          <div class="fineprint" style="margin-top: 10px;">
+            Serving Horndean, Waterlooville and surrounding Hampshire areas, with online therapy available across the UK.
+          </div>
+        </div>
+
+        <div>
+          <div><a href="tel:+447423819260">07423 819 260</a></div>
+          <div><a href="mailto:hello@thejourneytowholeness.com">hello@thejourneytowholeness.com</a></div>
+          <div><a href="https://www.bacp.co.uk/therapists/399649/david-billington/waterlooville-po8" target="_blank" rel="noopener">BACP profile</a></div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
