--- a/index.html
+++ b/index.html
@@ -448,6 +448,34 @@
       box-shadow: 0 10px 18px rgba(15, 23, 42, 0.06);
     }
 
+    .icon {
+  color: var(--accent);
+}
+
+.icon svg {
+  width: 20px;
+  height: 20px;
+}
+
+.icon-item {
+  transition: transform 0.12s ease, box-shadow 0.12s ease, border-color 0.12s ease;
+}
+
+.icon-item:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 18px 40px rgba(15, 23, 42, 0.08);
+  border-color: rgba(14, 165, 164, 0.22);
+}
+
+.icon-item strong {
+  font-size: 15px;
+}
+
+.icon-item span {
+  display: block;
+  margin-top: 2px;
+}
+
     .cta {
       border-top: 1px solid var(--border);
       background:
@@ -651,61 +679,104 @@
     </section>
 
     <section aria-labelledby="is-for-you">
-      <div class="container">
-        <h2 class="section-title" id="is-for-you">You might be feeling</h2>
-        <p class="lead">You don’t need to have everything figured out to begin.</p>
+  <div class="container">
+    <h2 class="section-title" id="is-for-you">You might be feeling</h2>
+    <p class="lead">You don’t need to have everything figured out to begin.</p>
 
-        <div class="grid grid-3" role="list">
-          <div class="icon-item" role="listitem">
-            <div class="icon" aria-hidden="true"></div>
-            <div>
-              <strong>Anxious or overwhelmed</strong>
-              <span>When worry or stress feels constant.</span>
-            </div>
-          </div>
-
-          <div class="icon-item" role="listitem">
-            <div class="icon" aria-hidden="true"></div>
-            <div>
-              <strong>Low in confidence</strong>
-              <span>Self-doubt, criticism, or feeling not “enough”.</span>
-            </div>
-          </div>
-
-          <div class="icon-item" role="listitem">
-            <div class="icon" aria-hidden="true"></div>
-            <div>
-              <strong>Struggling with depression</strong>
-              <span>Low mood, numbness, or disconnection.</span>
-            </div>
-          </div>
-
-          <div class="icon-item" role="listitem">
-            <div class="icon" aria-hidden="true"></div>
-            <div>
-              <strong>Navigating neurodiversity</strong>
-              <span>Autism, ADHD, or feeling out of step.</span>
-            </div>
-          </div>
-
-          <div class="icon-item" role="listitem">
-            <div class="icon" aria-hidden="true"></div>
-            <div>
-              <strong>Coping with loss</strong>
-              <span>Grief, change, or life feeling different.</span>
-            </div>
-          </div>
-
-          <div class="icon-item" role="listitem">
-            <div class="icon" aria-hidden="true"></div>
-            <div>
-              <strong>Feeling stuck</strong>
-              <span>Unsure what you need, but knowing something isn’t right.</span>
-            </div>
-          </div>
+    <div class="grid grid-3" role="list">
+      <div class="icon-item" role="listitem">
+        <div class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 21s7-4.4 7-11a7 7 0 1 0-14 0c0 6.6 7 11 7 11z"></path>
+            <path d="M12 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
+          </svg>
+        </div>
+        <div>
+          <strong>Anxious or overwhelmed</strong>
+          <span>When worry, pressure or stress feels constant.</span>
         </div>
       </div>
-    </section>
+
+      <div class="icon-item" role="listitem">
+        <div class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 21a9 9 0 1 0-9-9"></path>
+            <path d="M7 10h.01"></path>
+            <path d="M17 10h.01"></path>
+            <path d="M8 15s1.5-2 4-2 4 2 4 2"></path>
+          </svg>
+        </div>
+        <div>
+          <strong>Low in confidence</strong>
+          <span>Self-doubt, criticism, or feeling not “enough”.</span>
+        </div>
+      </div>
+
+      <div class="icon-item" role="listitem">
+        <div class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 19c4 0 7-3 7-7s-3-7-7-7-7 3-7 7 3 7 7 7z"></path>
+            <path d="M9.5 9.5h.01"></path>
+            <path d="M14.5 9.5h.01"></path>
+            <path d="M9 14c1 1 2 1.5 3 1.5S14 15 15 14"></path>
+          </svg>
+        </div>
+        <div>
+          <strong>Struggling with depression</strong>
+          <span>Low mood, numbness, or feeling disconnected.</span>
+        </div>
+      </div>
+
+      <div class="icon-item" role="listitem">
+        <div class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 2v4"></path>
+            <path d="M12 18v4"></path>
+            <path d="M4.9 4.9l2.8 2.8"></path>
+            <path d="M16.3 16.3l2.8 2.8"></path>
+            <path d="M2 12h4"></path>
+            <path d="M18 12h4"></path>
+            <path d="M4.9 19.1l2.8-2.8"></path>
+            <path d="M16.3 7.7l2.8-2.8"></path>
+            <circle cx="12" cy="12" r="3"></circle>
+          </svg>
+        </div>
+        <div>
+          <strong>Navigating neurodiversity</strong>
+          <span>Autism, ADHD, or feeling out of step with others.</span>
+        </div>
+      </div>
+
+      <div class="icon-item" role="listitem">
+        <div class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M20.8 12.6A9 9 0 1 1 11.4 3.2"></path>
+            <path d="M22 6l-10 10"></path>
+            <path d="M16 6h6v6"></path>
+          </svg>
+        </div>
+        <div>
+          <strong>Coping with loss</strong>
+          <span>Grief, change, or life feeling different than before.</span>
+        </div>
+      </div>
+
+      <div class="icon-item" role="listitem">
+        <div class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 2a10 10 0 1 0 10 10"></path>
+            <path d="M12 8v5"></path>
+            <path d="M12 17h.01"></path>
+          </svg>
+        </div>
+        <div>
+          <strong>Feeling stuck</strong>
+          <span>Unsure what you need, but knowing something isn’t right.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <section id="about" aria-labelledby="about-title">
       <div class="container">
