--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       --muted: #475569;
       --border: rgba(15, 23, 42, 0.10);
       --shadow: 0 14px 32px rgba(15, 23, 42, 0.08);
-      --radius: 12px;
+      --radius: 14px;
       --radius-sm: 14px;
       --max: 1100px;
       --pad: 24px;
@@ -42,8 +42,8 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       color: var(--ink);
       background:
-        radial-gradient(1200px 600px at 10% 10%, rgba(14, 165, 164, 0.10), transparent 60%),
-        radial-gradient(900px 500px at 90% 0%, rgba(37, 99, 235, 0.08), transparent 60%),
+        radial-gradient(1100px 560px at 10% 10%, rgba(14, 165, 164, 0.10), transparent 60%),
+        radial-gradient(900px 520px at 90% 0%, rgba(37, 99, 235, 0.06), transparent 60%),
         var(--bg);
       line-height: 1.55;
     }
@@ -71,7 +71,7 @@
     }
 
     section {
-      padding: 80px 0;
+      padding: 72px 0;
     }
 
     .section-title {
@@ -100,7 +100,7 @@
       position: sticky;
       top: 0;
       z-index: 50;
-      background: rgba(251, 250, 248, 0.85);
+      background: rgba(251, 250, 248, 0.88);
       backdrop-filter: blur(12px) saturate(160%);
       border-bottom: 1px solid var(--border);
     }
@@ -185,60 +185,44 @@
     }
 
     .hero {
-      padding: 72px 0 56px;
-      position: relative;
-      overflow: hidden;
+      padding: 70px 0 54px;
       border-bottom: 1px solid var(--border);
     }
 
-    .hero::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background:
-        radial-gradient(900px 520px at 12% 10%, rgba(14, 165, 164, 0.16), transparent 55%),
-        radial-gradient(750px 480px at 88% 0%, rgba(37, 99, 235, 0.10), transparent 60%),
-        linear-gradient(180deg, rgba(255, 255, 255, 0.70) 0%, rgba(255, 255, 255, 0.35) 100%);
-    }
-
     .hero-grid {
-      position: relative;
       display: grid;
-      grid-template-columns: 1.25fr 0.75fr;
-      gap: 26px;
-      align-items: start;
+      grid-template-columns: 1.2fr 0.8fr;
+      gap: 28px;
+      align-items: center;
     }
 
     .hero h1 {
-      font-size: 46px;
+      font-size: 48px;
       line-height: 1.05;
       letter-spacing: -0.03em;
       margin: 0 0 12px;
-      max-width: 26ch;
+      max-width: 28ch;
     }
 
     .subhead {
       font-size: 18px;
       color: var(--muted);
-      margin: 0 0 14px;
+      margin: 0 0 18px;
       max-width: 72ch;
     }
 
-    .pill-row {
+    .services-row {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
-      margin: 18px 0 22px;
+      margin: 0 0 22px;
     }
 
-    .pill {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
+    .service-chip {
       padding: 10px 12px;
       border: 1px solid var(--border);
       background: rgba(255, 255, 255, 0.78);
-      border-radius: 12px;
+      border-radius: 999px;
       font-size: 14px;
       box-shadow: 0 10px 20px rgba(15, 23, 42, 0.06);
     }
@@ -247,65 +231,39 @@
       display: flex;
       gap: 12px;
       flex-wrap: wrap;
-      margin-top: 10px;
     }
 
-    .hero-card {
+    .hero-profile {
       border: 1px solid var(--border);
       border-radius: var(--radius);
-      background: rgba(255, 255, 255, 0.84);
+      background: rgba(255, 255, 255, 0.92);
       box-shadow: var(--shadow);
       padding: 18px;
-    }
-
-    .headshot-top {
       display: grid;
-      grid-template-columns: 108px 1fr;
       gap: 14px;
-      align-items: center;
-      padding: 14px;
-      border-radius: 16px;
-      background: rgba(255, 255, 255, 0.78);
-      border: 1px solid var(--border);
-      margin-bottom: 12px;
     }
 
-    .headshot-top img {
-      width: 108px;
-      height: 108px;
+    .hero-profile img {
+      width: 100%;
+      height: 320px;
       object-fit: cover;
-      border-radius: 18px;
+      border-radius: var(--radius);
       border: 1px solid var(--border);
-      box-shadow: 0 12px 24px rgba(15, 23, 42, 0.08);
     }
 
-    .headshot-top strong {
-      display: block;
+    .profile-meta {
+      display: grid;
+      gap: 4px;
+    }
+
+    .profile-meta strong {
       font-size: 16px;
       letter-spacing: -0.01em;
     }
 
-    .headshot-top span {
-      display: block;
-      margin-top: 2px;
-      font-size: 13px;
-      color: var(--muted);
-    }
-
-    .contact-list {
-      display: grid;
-      gap: 10px;
-      margin: 0;
-      padding: 0;
-      list-style: none;
+    .profile-meta span {
       font-size: 14px;
-    }
-
-    .contact-item {
-      padding: 12px;
-      border-radius: 14px;
-      background: rgba(255, 255, 255, 0.70);
-      border: 1px solid var(--border);
+      color: var(--muted);
     }
 
     .grid {
@@ -329,14 +287,6 @@
       box-shadow: 0 12px 24px rgba(15, 23, 42, 0.06);
     }
 
-    .card.soft {
-      background: linear-gradient(
-        180deg,
-        rgba(255, 255, 255, 0.95) 0%,
-        rgba(15, 23, 42, 0.02) 100%
-      );
-    }
-
     .card h3 {
       margin: 0 0 8px;
       font-size: 16px;
@@ -357,13 +307,6 @@
       border-radius: var(--radius-sm);
       background: rgba(255, 255, 255, 0.86);
       box-shadow: 0 12px 24px rgba(15, 23, 42, 0.06);
-      transition: transform 0.12s ease, box-shadow 0.12s ease, border-color 0.12s ease;
-    }
-
-    .icon-item:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.08);
-      border-color: rgba(14, 165, 164, 0.22);
     }
 
     .icon {
@@ -380,20 +323,6 @@
     .icon svg {
       width: 20px;
       height: 20px;
-    }
-
-    .icon-item strong {
-      display: block;
-      margin-bottom: 4px;
-      letter-spacing: -0.01em;
-      font-size: 15px;
-    }
-
-    .icon-item span {
-      color: var(--muted);
-      font-size: 14px;
-      display: block;
-      margin-top: 2px;
     }
 
     .about {
@@ -541,6 +470,10 @@
         grid-template-columns: 1fr;
       }
 
+      .hero-profile img {
+        height: 280px;
+      }
+
       .about {
         grid-template-columns: 1fr;
       }
@@ -572,7 +505,7 @@
 
     @media (max-width: 520px) {
       .hero h1 {
-        font-size: 38px;
+        font-size: 40px;
       }
 
       section {
@@ -610,49 +543,35 @@
         <div class="hero-grid">
           <div>
             <h1>Counselling in Horndean, Hampshire &amp; Online</h1>
-            <p class="subhead">Supporting adults with anxiety, depression and neurodiversity.</p>
-            <p class="lead">A calm, confidential space to explore what feels painful, confusing or overwhelming.</p>
+            <p class="subhead">
+              A calm, confidential space to explore what feels painful, confusing or overwhelming.
+            </p>
 
-            <div class="pill-row" aria-label="Key details">
-              <div class="pill">📍 In-person in Horndean (near Waterlooville)</div>
-              <div class="pill">💻 Online therapy across the UK</div>
-              <div class="pill">📞 Free 20-minute introductory call</div>
+            <div class="services-row" aria-label="Services">
+              <div class="service-chip">Counselling &amp; psychotherapy</div>
+              <div class="service-chip">Anxiety &amp; depression</div>
+              <div class="service-chip">Self-esteem</div>
+              <div class="service-chip">ASD &amp; neurodiversity</div>
+              <div class="service-chip">Online or in person</div>
             </div>
 
             <div class="hero-actions">
               <a class="btn btn-primary" href="#contact">Book a free call</a>
               <a class="btn" href="#contact">Send a message</a>
             </div>
-          </div>
-
-          <aside class="hero-card" aria-label="Quick contact">
-            <div class="headshot-top">
-              <img src="david-headshot.jpg" alt="David Billington" loading="eager" />
-              <div>
-                <strong>David Billington</strong>
-                <span>Qualified counsellor</span>
-                <span>Horndean, Hampshire &amp; online</span>
-              </div>
-            </div>
-
-            <ul class="contact-list">
-              <li class="contact-item">
-                <strong>Phone</strong><br />
-                <a href="tel:+447423819260">07423 819 260</a>
-              </li>
-              <li class="contact-item">
-                <strong>Email</strong><br />
-                <a href="mailto:hello@thejourneytowholeness.com">hello@thejourneytowholeness.com</a>
-              </li>
-              <li class="contact-item">
-                <strong>BACP profile</strong><br />
-                <a href="https://www.bacp.co.uk/therapists/399649/david-billington/waterlooville-po8" target="_blank" rel="noopener">View registration</a>
-              </li>
-            </ul>
 
             <p class="fineprint" style="margin-top: 12px;">
               Free 20-minute introductory call available.
             </p>
+          </div>
+
+          <aside class="hero-profile" aria-label="Profile">
+            <img src="david-headshot.jpg" alt="David Billington" loading="eager" />
+            <div class="profile-meta">
+              <strong>David Billington</strong>
+              <span>Qualified counsellor</span>
+              <span>Horndean, Hampshire &amp; online</span>
+            </div>
           </aside>
         </div>
       </div>
