--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <style>
     :root {
       --bg: #fbfaf8;
-      --panel: #ffffff;
+      --panel: #fff;
       --ink: #0f172a;
       --muted: #475569;
       --border: rgba(15, 23, 42, 0.10);
