--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
           <div>
             <h1>Counselling in Horndean, Hampshire &amp; Online</h1>
             <p class="intro">
-              I’m David Billington, a qualified counsellor. I offer a confidential space to talk through what’s going on for you, at your pace.
+              I provide a safe and confidential space where you can share your story, at your own pace. By exploring what feels heavy or unclear, you can begin to make meaningful changes and empower yourself to take the path that feels right for you.
             </p>
 
             <div class="hero-meta">
