--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                <div class="hero-grid">
                   <div>
-                     <h1>Online counselling, and face to face in Horndean, Hampshire</h1>
+                     <h1>Counselling in Horndean, Hampshire &amp; Online</h1>
                      <p class="intro"> I provide a safe and confidential space where you can share your story, at your own pace. Whatever feels heavy, unclear or difficult, we can explore it together and begin to make sense of it — so you can empower yourself to take the right path for you. </p>
                      <div class="hero-meta">
                         <div><strong>Where:</strong> online across the UK, and in-person in Horndean (near Waterlooville)</div>
