--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
   <div class="container">
     <div class="hero-grid">
       <div>
-        <h1>Online counselling, and face to face in Horndean, Hampshire</h1>
+        <h1>Councelling in Horndean, Hampshire & Online</h1>
         <p class="intro">
-          I provide a safe and confidential space where you can share your story, at your own pace. Whatever feels heavy, unclear or difficult, we can explore it together and begin to make sense of it, so you can empower yourself to take the right path for you.
+          I provide a safe and confidential space where you can share your story, at your own pace. Whatever feels heavy, unclear or difficult, we can explore it together and begin to make sense of it so you can empower yourself to take the right path for you.
         </p>
         <div class="meta">
           <div><strong>Where:</strong> Online across the UK, and in-person in Horndean</div>
