--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Counselling in Horndean | David Billington | Online & Hampshire</title>
+  <title>Counselling in Horndean, Hampshire & Online | David Billington</title>
   <meta
     name="description"
     content="Confidential counselling in Horndean, Hampshire and online. Free 20-minute introductory call. Support for ADD/ADHD, anxiety, autism spectrum, bereavement, depression and more."
@@ -48,7 +48,6 @@
     a:hover{text-decoration:underline;text-underline-offset:3px}
 
     .container{max-width:var(--max);margin:0 auto;padding:0 var(--pad)}
-    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
 
     .site-header{
       position:sticky;
@@ -64,13 +63,15 @@
       align-items:center;
       justify-content:space-between;
       gap:var(--s3);
-      padding:var(--s3) 0 var(--s2);
+      padding:var(--s3) 0;
     }
 
     .brand{
-      display:grid;
-      gap:2px;
+      display:flex;
+      align-items:baseline;
+      gap:10px;
       line-height:1.15;
+      white-space:nowrap;
     }
 
     .brand strong{
@@ -94,7 +95,7 @@
       font-weight:620;
       font-size:14px;
       color:var(--ink);
-      transition:transform 160ms ease, background 160ms ease, border-color 160ms ease, opacity 160ms ease;
+      transition:transform 160ms ease, background 160ms ease, border-color 160ms ease;
       white-space:nowrap;
       cursor:pointer;
     }
@@ -106,11 +107,13 @@
     }
 
     .btn:active{transform:translateY(1px)}
+
     .btn-primary{
       background:var(--ink);
       border-color:var(--ink);
       color:#fff;
     }
+
     .btn-primary:hover{background:#1a1b20;border-color:#1a1b20}
 
     .tabs{
@@ -162,7 +165,7 @@
       font-size:40px;
       line-height:1.12;
       letter-spacing:-.03em;
-      max-width:32ch;
+      max-width:34ch;
     }
 
     h2{
@@ -238,12 +241,6 @@
     .grid-2{
       display:grid;
       grid-template-columns:repeat(2, minmax(0, 1fr));
-      gap:var(--s4);
-    }
-
-    .grid-3{
-      display:grid;
-      grid-template-columns:repeat(3, minmax(0, 1fr));
       gap:var(--s4);
     }
 
@@ -365,7 +362,6 @@
     }
 
     textarea{min-height:150px;resize:vertical}
-
     input:focus,textarea:focus{border-color:rgba(16,17,20,.22)}
 
     footer{
@@ -405,10 +401,11 @@
     @media (max-width: 900px){
       .hero-grid{grid-template-columns:1fr;gap:var(--s4)}
       .profile-photo{height:280px}
-      .grid-2,.grid-3,.steps,.alpha-grid,.footer-grid,.form-row{grid-template-columns:1fr}
+      .grid-2,.steps,.alpha-grid,.footer-grid,.form-row{grid-template-columns:1fr}
       section{padding:calc(var(--s6) - 8px) 0}
       h1{font-size:34px}
       h2{font-size:24px}
+      .brand{white-space:normal;flex-wrap:wrap}
     }
   </style>
 </head>
@@ -440,11 +437,11 @@
       <div class="container">
         <div class="hero-grid">
           <div class="reveal">
-            <h1>Online counselling, and face to face in Horndean, Hampshire</h1>
+            <h1>Counselling in Horndean, Hampshire &amp; online</h1>
 
             <p class="intro">
               I provide a safe and confidential space where you can share your story, at your own pace.
-              Whatever feels heavy, unclear or difficult, we can explore it together and begin to make sense of it —
+              Whatever feels heavy, unclear or difficult, we can explore it together and begin to make sense of it,
               so you can empower yourself to take the right path for you.
             </p>
 
@@ -456,7 +453,7 @@
 
             <div class="hero-actions">
               <a class="btn btn-primary" href="#contact">Book a free call</a>
-              <a class="btn" href="#help">What I can help with</a>
+              <a class="btn" href="#start">How it works</a>
             </div>
           </div>
 
@@ -465,7 +462,6 @@
             <div class="profile-meta">
               <strong>David Billington</strong>
               <span>Horndean, Hampshire &amp; online</span>
-              <span>Adults (18+)</span>
             </div>
           </aside>
         </div>
@@ -479,7 +475,7 @@
           <p>
             If you are considering counselling, it can be a sign that you are taking the first steps towards addressing a problem or discomfort in your life.
             It may be that something is not working for you, or that you are feeling unsure or distressed but don’t know why.
-            Counselling can help you explore and understand your thoughts, feelings and behaviours — and begin to move forward.
+            Counselling can help you explore and understand your thoughts, feelings and behaviours, and begin to move forward.
           </p>
         </div>
 
@@ -539,7 +535,7 @@
 
         <div class="pills reveal" aria-label="How sessions can happen">
           <div class="pill">Online therapy</div>
-          <div class="pill">Face-to-face therapy (if you want)</div>
+          <div class="pill">Face-to-face therapy</div>
           <div class="pill">Telephone therapy</div>
           <div class="pill">Short term or long term</div>
         </div>
@@ -552,8 +548,8 @@
           <div class="reveal">
             <h2>My practice</h2>
             <p>
-              I work online and in person from a private and confidential setting in Horndean, Hampshire. I have found online sessions to be highly effective,
-              as clients are in a safe familiar space and travel can cause anxiety for many people.
+              I work online and in person from a private and confidential setting in Horndean, Hampshire.
+              I have found online sessions to be highly effective, as clients are in a safe familiar space and travel can cause anxiety for many people.
             </p>
             <p>
               I am a member of the British Association for Counselling and Psychotherapy (BACP) and I work within their ethical framework.
@@ -604,10 +600,11 @@
           </div>
 
           <div class="panel">
-            <h3>Who I work with</h3>
+            <h3>Working together</h3>
             <ul>
-              <li>Adults of all ages, from 18+</li>
-              <li>Online or face-to-face (your choice)</li>
+              <li>Warm, collaborative and grounded</li>
+              <li>A pace that feels safe for you</li>
+              <li>Time-limited, short-term or long-term</li>
             </ul>
           </div>
         </div>
