--- a/index.html
+++ b/index.html
@@ -412,15 +412,6 @@
           <strong>David Billington</strong>
           <span>Counselling in Horndean &amp; online</span>
         </a>
-
-        <nav class="tabs tabs-inline" aria-label="Page sections">
-          <a class="tab" href="#help">What I can help with</a>
-          <a class="tab" href="#start">Getting started</a>
-          <a class="tab" href="#practice">My practice</a>
-          <a class="tab" href="#how">How I work</a>
-          <a class="tab" href="#therapy">Therapy approaches</a>
-          <a class="tab" href="#contact">Contact</a>
-        </nav>
       </div>
 
       <a class="btn btn-primary" href="#contact">Book a free call</a>
@@ -433,7 +424,7 @@
       <div class="container">
         <div class="hero-grid">
           <div class="reveal">
-            <h1>Counselling in Horndean, Hampshire &amp; online</h1>
+            <h1>Counselling in Horndean, Hampshire &amp; Online</h1>
 
             <p class="intro">
               I provide a safe and confidential space where you can share your story, at your own pace.
@@ -457,7 +448,7 @@
             <img class="profile-photo" src="david-headshot.jpg" alt="David Billington" loading="eager" />
             <div class="profile-meta">
               <strong>David Billington</strong>
-              <span>Horndean, Hampshire &amp; online</span>
+              <span>Horndean, Hampshire &amp; Online</span>
             </div>
           </aside>
         </div>
