--- a/index.html
+++ b/index.html
@@ -705,5 +705,38 @@
       els.forEach(function (el) { io.observe(el); });
     })();
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Psychologist",
+  "name": "David Billington",
+  "url": "https://www.thejourneytowholeness.com/",
+  "areaServed": [
+    "Horndean",
+    "Waterlooville",
+    "Hampshire",
+    "United Kingdom"
+  ],
+  "serviceType": "Counselling and Psychotherapy",
+  "availableChannel": [
+    {
+      "@type": "ServiceChannel",
+      "serviceLocation": {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Horndean",
+          "addressRegion": "Hampshire",
+          "addressCountry": "UK"
+        }
+      }
+    },
+    {
+      "@type": "ServiceChannel",
+      "availableLanguage": "English"
+    }
+  ]
+}
+</script>
 </body>
 </html>
